# a2a-x402

./: .gitignore  CHANGELOG.md  PR.md  README.md  claude.md  x402-a2a-solution-guide.md
.github/workflows/: examples-python-adk-demo.yml
a2a_x402/: README.md  __init__.py  extension.py  pyproject.toml
a2a_x402/core/: protocol.py  wallet.py
a2a_x402/executors/: __init__.py  base.py  client.py  server.py
a2a_x402/tests/: test_composability.py  test_executors_e2e.py  test_executors_package.py
a2a_x402/tests/core/: test_utils.py  test_wallet.py
a2a_x402/tests/executors/: __init__.py  test_base.py  test_client.py
a2a_x402/tests/types/: __init__.py  test_config.py
a2a_x402/types/: __init__.py  messages.py  state.py
examples/javascript/adk/: README.md  client.js  package-lock.json  package.json  server.js  verify.js
examples/python/adk/: .env-example  .env.example  .gitignore  README.md  __init__.py  pyproject.toml
examples/python/adk-demo/: .env.example  EIGENDA_README.md  PAYMENT_SETUP.md  README.md  README_EIGENDA.md  pyproject.toml  run_cli.sh  run_client.sh  test_certificate.py
examples/python/adk-demo/cli_agent/: _remote_agent_connection.py  agent.py  client_agent.py  wallet.py
examples/python/adk-demo/client_agent/: __init__.py  _task_store.py  agent.py  approve_helper.py  client_agent.py  wallet.py
examples/python/adk-demo/eigenda_implementation/: README.md  main.py  pyproject.toml
examples/python/adk-demo/server/: __main__.py
examples/python/adk-demo/server/agents/: _adk_agent_executor.py  adk_merchant_agent.py  base_agent.py  eigenda_agent.py  mock_facilitator.py  routes.py  x402_merchant_executor.py
examples/python/adk-eigenda-demo/: .env.example  README.md  TEST_INSTRUCTIONS.md  pyproject.toml  run_cli.sh  run_eigenda_demo.sh  test_certificate.py
examples/python/adk-eigenda-demo/cli_agent/: agent.py  approve_helper.py  client_agent.py  wallet.py
examples/python/adk-eigenda-demo/client_agent/: _task_store.py  agent.py  wallet.py
examples/python/adk-eigenda-demo/server/: __main__.py
examples/python/adk-eigenda-demo/server/agents/: _adk_agent_executor.py  adk_merchant_agent.py  eigenda_agent.py  mock_facilitator.py  real_facilitator.py  routes.py  x402_merchant_executor.py
examples/python/adk/client/: pyproject.toml
examples/python/adk/client/host_agent/: __init__.py  _remote_agent_connection.py  agent.py  host_agent.py
examples/python/adk/host_agent/: _remote_agent_connection.py  host_agent.py
examples/python/adk/server/: __init__.py  __main__.py  products.json
examples/python/adk/server/agents/: __init__.py  _adk_agent_executor.py  merchant_agent.py  routes.py
examples/python/sui-demo/: .env-example  README.md  agent.py  pyproject.toml  test_agent_flow.py  test_batch_payment.py  test_batch_payments.py  test_batch_payments_final.py  test_discovery.py  test_optimized_batch.py  test_specific_purchase.py
examples/python/sui-demo/client/: agent.py  host.py  host_complex.py.bak
examples/python/sui-demo/server/: merchant_base.py  merchants.py  server.py
python/a2a_x402/: LICENSE  README.md  __init__.py  extension.py  pyproject.toml  run_tests.py  setup.sh  test_runner.sh  working_test.py
python/a2a_x402/a2a_x402/core/: protocol.py
python/a2a_x402/a2a_x402/tests/: test_e2e_payment_flow.py
python/a2a_x402/a2a_x402/tests/core/: test_wallet.py
python/a2a_x402/a2a_x402/tests/executors/: test_server.py
python/a2a_x402/a2a_x402/types/: __init__.py  errors.py  messages.py
python/a2a_x402/core/: __init__.py  agent.py  helpers.py  merchant.py  protocol.py  utils.py  wallet.py
python/a2a_x402/executors/: __init__.py  base.py  client.py  server.py
python/a2a_x402/tests/: __init__.py  conftest.py  test_composability.py  test_core.py  test_e2e_payment_flow.py  test_executors_e2e.py  test_executors_package.py  test_extension.py
python/a2a_x402/tests/core/: __init__.py  test_helpers.py  test_merchant.py  test_protocol.py  test_utils.py  test_wallet.py
python/a2a_x402/tests/executors/: test_base.py  test_client.py  test_server.py
python/a2a_x402/tests/types/: test_config.py  test_errors.py  test_messages.py  test_state.py
python/a2a_x402/types/: __init__.py  config.py  errors.py  messages.py  state.py
python/a2a_x402/types_temp/: __init__.py  config.py  errors.py
python/examples/adk-demo/client_agent/: client_agent.py
python/examples/adk-demo/server/agents/: adk_merchant_agent.py  mock_facilitator.py
python/examples/ap2-demo/: .env.example  README.md  local_wallet.py  mock_wallet.py  pyproject.toml
python/examples/ap2-demo/client_agent/: _remote_agent_connection.py  _task_store.py  agent.py  client_agent.py
python/examples/ap2-demo/server/: __main__.py
python/examples/ap2-demo/server/agents/: _adk_agent_executor.py  adk_merchant_agent.py  local_facilitator.py  mock_facilitator.py  routes.py  x402_merchant_executor.py
python/x402_a2a/: README.md  __init__.py  extension.py  pyproject.toml
python/x402_a2a/core/: __init__.py  merchant.py  protocol.py  utils.py  wallet.py
python/x402_a2a/executors/: __init__.py  server.py
python/x402_a2a/partners/: __init__.py
python/x402_a2a/partners/cashu/: README.md  __init__.py  helpers.py
python/x402_a2a/src/x402_a2a/core/: utils.py
python/x402_a2a/src/x402_a2a/executors/: client.py  server.py
python/x402_a2a/tests/: test_core.py
python/x402_a2a/tests/partners/: test_cashu.py
python/x402_a2a/types/: __init__.py  config.py  errors.py  payloads.py
schemes/: scheme_exact_lightning.md
spec/: A2A_x402.md  a2a_x402.md
spec/v0.2/: spec.md
v0.1/: spec.md
v0.1/schemes/: README.md  scheme_exact_lightning.md
